# nbmetis

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pyproject.toml
src/: nbmetis.cpp
src/nbmetis/: nbmetis.py
tests/: test_node_nd.py
